test_suite5/ALAN/test_suite/alan-2022-examples/failing/004330_mutation.alan
source Ji3Q begin leave; leave if 606 then relax end end
